--- a/07-Pig-Game/starter/style.css
+++ b/07-Pig-Game/starter/style.css
@@ -158,10 +158,13 @@ main {
 }
 
 .player--winner {
-  background-color: #2f2f2f;
+  background-color: hsl(125, 51%, 66%);
 }
 
 .player--winner .name {
   font-weight: 700;
   color: #c7365f;
+}
+.hidden {
+  display: none;
 }
